# mockly

./: .gitignore  AUTO_INTRO_FEATURE.md  AUTO_INTRO_FIX_AND_TEST.md  CODE_EVALUATION_IMPLEMENTATION.md  DIAGNOSE_TRANSCRIPTION.md  EVALUATION_EXAMPLE.md  FIX_COMPLETE.md  FIX_NO_WORDS.md  IMPLEMENTATION_SUMMARY.md  LIPSYNC_FIX_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_LIPSYNC.md  README.md  TRANSCRIPTION_SYSTEM_SUMMARY.md  VOICE_IMPLEMENTATION_SUMMARY.md  VOICE_INTEGRATION_GUIDE.md  VOICE_QUICKSTART.md  docker-compose.yml  environment.yml  test_code_evaluation.py  test_deepgram_api.py  test_lipsync_integration.sh  test_transcription.py
mockly-backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  questions.yaml  test_questions.yaml
mockly-backend/app/: Dockerfile  main.py  models.py  routes_execute.py  routes_feedback.py  routes_questions.py  routes_webrtc.py  sandbox.py
mockly-backend/app/routes/: routes_audio.py  routes_execute.py  routes_feedback.py  routes_questions.py  routes_webrtc.py
mockly-backend/app/services/: webrtc_manager.py
mockly-backend/app/services/chatbot/: __init__.py  agent.py  claude_client.py  prompts.py  tts_adapter.py
mockly-backend/app/services/workflow/: .env.example  .gitignore  INTEGRATION_GUIDE.md  SYSTEM_FLOW.txt  TRANSCRIPTION_README.md  __init__.py  captions.py  claude.py  clients.py  config.py  evaluation.py  example.env  example_output.json  frontend_example.html  prompts.py  (+8 more)
mockly-backend/workflow/: .env.example  .gitignore  README.md  api.py  config.py  request.json  requirements.txt
(+45 files in other folders)
